# fastapi-topaz

./: .gitignore  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md
docs/explanation/: architecture.md  authorization-models.md  patterns.md  sso-concepts.md
docs/hooks/: test_docs_generator.py
docs/how-to/: audit-logging.md  choosing-authorization-approach.md  circuit-breaker.md  connection-pooling.md  identity-providers.md  integration-testing.md  middleware.md  observability.md  policy-generation.md  resource-hierarchy.md  testing.md  troubleshooting.md
docs/how-to/example-app/: authentik-setup.md  local-development.md
docs/reference/: api.md  cli.md  example-app-spec.md  oidc.md
docs/tutorials/: getting-started.md
docs/tutorials/example-app/: 01-setup.md  02-authentication.md  03-authorization.md  04-sharing-documents.md
integration-tests/: .env.example  Makefile  docker-compose.yml  env.authentik
integration-tests/e2e/: .gitignore  Makefile  README.md  pyproject.toml  run_tests.py
integration-tests/e2e/tests/: __init__.py  auth_helper.py  conftest.py  test_scenario_alice.py  test_scenario_authorization_failures.py  test_scenario_bob.py  test_scenario_public_documents.py  test_scenario_sharing.py
integration-tests/infra/authentik/: .gitkeep
integration-tests/infra/policies/: common.rego  displaystate.rego  document.rego  folder.rego  rebac.rego
integration-tests/infra/terraform/authentik-webapp/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
integration-tests/infra/topaz-config/: config.yaml
integration-tests/mock-location-api/: Dockerfile  main.py
integration-tests/webapp/: .env.example  Dockerfile  alembic.ini  pyproject.toml
integration-tests/webapp/alembic/: env.py
integration-tests/webapp/alembic/versions/: 001_initial_schema.py
integration-tests/webapp/app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  topaz_integration.py
integration-tests/webapp/app/routers/: documents.py  folders.py  shares.py
integration-tests/webapp/app/static/: style.css
integration-tests/webapp/app/templates/: base.html  index.html
integration-tests/webapp/tests/: conftest.py  test_auth.py  test_authorization.py  test_config.py  test_documents.py  test_models.py  test_routers_documents.py  test_routers_folders.py  test_topaz_integration.py
integration-tests/webapp/tests/integration/: QUICKSTART.md  README.md  __init__.py  auth_helper.py  conftest.py  run_tests.py  test_scenario_alice.py  test_scenario_authorization_failures.py  test_scenario_bob.py  test_scenario_new_features.py  test_scenario_public_documents.py  test_scenario_sharing.py
src/fastapi_topaz/: __init__.py  _defaults.py  audit.py  circuit_breaker.py  cli.py  codegen.py  connection_pool.py  dependencies.py  middleware.py  observability.py  testing.py
test/: test_audit.py  test_circuit_breaker.py  test_cli.py  test_codegen.py  test_connection_pool.py  test_dependencies.py  test_middleware.py  test_observability.py  test_testing_utils.py
