[project]
name = "fastapi-topaz"
version = "0.1"
description = "Topaz integration for FastAPI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Topaz Community" }]
maintainers = [{ name = "Topaz Community" }]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = ["fastapi>=0.100.0", "aserto>=0.32.2"]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
  "pyright>=1.1.0",
  "pytest>=8.2.2",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=4.1.0",
  "httpx>=0.28.0",
  "pip-audit>=2.7.0",
  "bandit>=1.7.0",
  "twine>=5.0.0",
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.26.0",
  "mkdocs-mermaid2-plugin>=1.1.0",
]

[project.scripts]
fastapi-topaz = "fastapi_topaz.cli:main"

[project.urls]
Homepage = "https://github.com/opcr-io/topaz"
Repository = "https://github.com/opcr-io/topaz"
Documentation = "https://www.topaz.sh/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "integration-tests",
  ".github",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_topaz"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long (handled by formatter)
]

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"
reportUnusedVariable = "warning"
reportUnusedImport = "warning"

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "--cov=src/fastapi_topaz --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src/fastapi_topaz"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
show_missing = true
