[project]
name = "fastapi-topaz-test-webapp"
version = "0.1.0"
description = "Test webapp for fastapi-topaz ABAC capabilities"
requires-python = ">=3.11"
dependencies = [
    "fastapi-topaz",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "authlib>=1.4.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.20",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "itsdangerous>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "basedpyright>=1.21.0",
]
integration = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "playwright>=1.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "RET", "SIM", "ARG"]
ignore = ["S101", "S104", "S105", "S106", "S107"]

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.11"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
fastapi-topaz = { path = "../..", editable = true }
